fix isCurrentMonth function

--- a/horizontal-picker/src/main/res/values/strings.xml
+++ b/horizontal-picker/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Horizontal Picker</string>
-    <string name="today">Today</string>
+    <string name="today">vai a oggi</string>
 </resources>
